# a-delete

./: README.md
BD_Books/: CreationBD  CreationBD.cpp
ClientBookEncoderQt/: CMakeLists.txt
ClientBookEncoderQt/include/: OBEP.h  mainwindowclientbookencoder.h
ClientBookEncoderQt/src/: OBEP.cpp  mainwindowclientbookencoder.cpp
Serveur/: CMakeLists.txt
